# wcapp

./: .gitignore  .last_commit  404.html  Cargo.toml  LICENSE  README.md  generate_docs.py  index.html  install.ps1  install.sh  mkdocs.yml  sitemap.xml
.github/workflows/: deploy.yml  release.yml
anime/: index.html
docs/: index.md
landscape/: index.html
mythological/: index.html
realistic/: index.html
search/: search_index.json
space/: index.html
src/: config.rs  main.rs
src/commands/: clean.rs  cycle.rs  fetch.rs  list.rs  mod.rs  set.rs  uninstall.rs  update.rs
uncategorized/: index.html
