[package]
name = "wcapp"
version = "0.1.5"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.5"
rand = "0.8"
dirs = "5.0"
wallpaper = "3.2"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
